// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Number Control > should render a number control 1`] = `
"<div style=\\"left: 704px; top: 10px;\\" class=\\"tl-absolute tl-select-none tl-z-24 tl-w-280px tl-font-sans tl-text-xs\\">
  <div tabindex=\\"0\\" class=\\"tl-bg-white tl-shadow-xl tl-rounded tl-border-4 tl-border-solid tl-border-black\\">
    <header class=\\"tl-relative tl-cursor-grabbing tl-p-4 tl-flex tl-justify-between tl-text-gray-200 tl-relative\\"><i class=\\"tl-h-4 tl-w-4 tl-p-1.5 tl-flex tl-items-center tl-line-height-0 tl-rounded-full tl-bg-gray-100 tl-text-xs\\">🍰</i>
      <div><i class=\\"i-ic-baseline-drag-indicator\\"></i><i class=\\"i-ic-baseline-drag-indicator\\"></i><i class=\\"i-ic-baseline-drag-indicator\\"></i></div>
      <div></div>
    </header>
    <!--v-if-->
    <div>
      <div class=\\"tl-flex tl-px-4 tl-justify-between tl-gap-4 tl-items-center tl-mb-2\\"><label for=\\"numberValue\\" title=\\"numberValue\\" class=\\"tl-text-gray-500 tl-w-1/3 tl-truncate\\">numberValue</label><input id=\\"numberValue\\" class=\\"tl-p-2 tl-w-1/3 tl-rounded tl-text-right tl-text-xs tl-text-gray-400 tl-bg-gray-100 tl-focus:border-gray-200 tl-outline-none tl-border-none tl-font-sans\\" type=\\"number\\"></div>
    </div>
  </div>
</div>"
`;

exports[`number Control > should render a number control 1`] = `
"<div style="left: 704px; top: 10px;" class="tl-absolute tl-select-none tl-z-24 tl-w-280px tl-font-sans tl-text-xs">
  <div tabindex="0" class="tl-bg-white tl-shadow-xl tl-rounded tl-border-4 tl-border-solid tl-border-black">
    <header class="tl-relative tl-cursor-grabbing tl-p-4 tl-flex tl-justify-between tl-text-gray-200 tl-relative"><i class="tl-h-4 tl-w-4 tl-p-1.5 tl-flex tl-items-center tl-line-height-0 tl-rounded-full tl-bg-gray-100 tl-text-xs">🍰</i>
      <div><i class="i-ic-baseline-drag-indicator"></i><i class="i-ic-baseline-drag-indicator"></i><i class="i-ic-baseline-drag-indicator"></i></div>
      <div></div>
    </header>
    <!--v-if-->
    <div>
      <div class="tl-flex tl-px-4 tl-justify-between tl-gap-4 tl-items-center tl-mb-2"><label for="numberValue" title="numberValue" class="tl-text-gray-500 tl-w-1/3 tl-truncate">numberValue</label><input id="numberValue" class="tl-p-2 tl-w-1/3 tl-rounded tl-text-right tl-text-xs tl-text-gray-400 tl-bg-gray-100 tl-focus:border-gray-200 tl-outline-none tl-border-none tl-font-sans" type="number" value="5"></div>
    </div>
  </div>
</div>"
`;
